--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="PT-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/sonic-runners-svgrepo-com (1).svg" />
+    <link rel="icon" type="image/svg+xml" href="/fox-tail-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portifolio</title>
   </head>
